# quant-trade-first-project

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LIVE_TRADING_SETUP.md  Makefile  README.md  TASKS.md  data.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  sp100.csv
data/local/: AAPL.csv  MSFT.csv  NVDA.csv  universe.csv
data/local/cache/: daily.parquet
reports/: README.md  master_report.json
src/quantbobe/: __init__.py  cli.py  strategy.py
src/quantbobe/backtest/: __init__.py  engine.py  metrics.py  reports.py
src/quantbobe/config/: __init__.py  default.yaml  loader.py  local_csv.yaml  schema.py
src/quantbobe/data/: __init__.py  alpaca.py  base.py  calendars.py  loaders.py  local_csv.py  news.py  yahoo.py
src/quantbobe/execution/: __init__.py  broker_alpaca.py  broker_dummy.py  router.py  slippage.py
src/quantbobe/features/: __init__.py  intraday.py  mean_reversion.py  momentum.py  momentum_multi.py  quality_value.py  regimes.py  risk.py
tests/: conftest.py  test_backtest_engine.py  test_costs.py  test_features.py  test_paper_trade.py  test_portfolio.py  test_regimes.py
web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/components/: cta.tsx  docs-content.tsx  feature-grid.tsx  footer.tsx  hero.tsx  master-guide.tsx  navbar.tsx  performance-dashboard.tsx  redundancy-checklist.tsx  roadmap.tsx  section.tsx  status-panel.tsx  strategy-sleeves.tsx  tooling-map.tsx
web/lib/: repo.ts
(+38 files in other folders)
